--- a/Modulo 3/projetoweb/views/cliente/cliente.handlebars
+++ b/Modulo 3/projetoweb/views/cliente/cliente.handlebars
@@ -1,5 +1,7 @@
 <h1>Clientes</h1>
 <hr>
+<!-- comentario -->
+<a href="./clientes/novo" class="btn btn-primary">Novo</a>
 <table class="table">
     <thead>
         <tr>
